Revert "testing ugly solution to overlapping-bug"
This reverts commit d27e90accffc875b5a46d9273878f2c259bbf2d9.

--- a/css/aliceStyle.css
+++ b/css/aliceStyle.css
@@ -9,7 +9,6 @@ body {
 .page {
     height: 100vh;
     min-height: fit-content;
-    display: block;
 }
 
 .alice {
